[package]
name = "weight-lru"
version = "0.0.1"
authors = ["cloverstd <cloverstd@gmail.com>"]
categories = ["caching", "no-std"]
description = "A LRU cache implementation"
homepage = "https://github.com/cloverstd/weight-lru-rs"
repository = "https://github.com/cloverstd/weight-lru-rs.git"
documentation = "https://docs.rs/weight-lru/"
readme = "README.md"
license = "MIT"
keywords = ["LRU", "cache"]

[features]
default = ["hashbrown"]
nightly = ["hashbrown", "hashbrown/nightly"]

[dependencies]
hashbrown = { version = "0.15.2", optional = true }

[dev-dependencies]
scoped_threadpool = "0.1.*"
stats_alloc = "0.1.*"
